@@ -1,5 +1,9 @@
 2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
+	* DummyAlgorithm.cs: rev.1825で変更した基底クラスのインターフェイス変更を反映
+	
+2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
 	* ecb_vt.txt:
 	* ecb_e_m.txt:
 	* ecb_vk.txt:
